<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_tema">Тёмная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text">https://practicum.yandex.ru/android-developer//</string>
    <string name="support_email">yelizaveta.kotsar@bk.ru</string>
    <string name="support_tema">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error_title">Проблемы со связью</string>
    <string name="connection_error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="time">00:00</string>
    <string name="media_empty_text">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создавали\nни одного плейлиста</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="player">Аудиоплеер</string>

    <string name="playlist_name_required">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>

    <string name="finish_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created_toast">Плейлист %1$s создан</string>

    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="playlist_title_placeholder">Best songs 2021</string>
    <string name="playlist_year_placeholder">2022</string>
    <string name="playlist_meta_placeholder">300 минут · 98 треков</string>
    <string name="playlist" />

    <string name="tracks_count_mask">%1$d треков</string>
    <string name="minutes_and_tracks_mask">%1$d минут · %2$d треков</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete_track_question">Удалить трек из плейлиста?</string>
    <string name="in_development">В разработке</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>

    <string name="playlist_share_empty">
    В этом плейлисте нет списка треков, которым можно поделиться
</string>

    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист «%1$s»?</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>


    </plurals>
</resources>