<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:windowBackground"
    android:orientation="vertical"
    android:padding="0dp"
    android:id="@+id/main">

    <TextView
        android:id="@+id/title"
        style="@style/MainTitleStyle"
        android:text="@string/app_name" />

    <Button
        style="@style/MainButtonStyle"
        android:id="@+id/search_button"
        android:text="@string/search"
        app:icon="@drawable/lypa"
        android:layout_marginBottom="@dimen/button_margin_bottom_small" />

    <Button
        android:id="@+id/media_button"
        style="@style/MainButtonStyle"
        android:text="@string/media"
        app:icon="@drawable/media_icon"
        android:layout_marginBottom="@dimen/button_margin_bottom_small" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/nastroiki_icon"
        android:layout_marginBottom="@dimen/button_margin_bottom_big" />
</LinearLayout>
