<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_navigation_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.example.playlistmaker.ui.media.fragment.MediaFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media">

        <action
            android:id="@+id/action_media_to_player"
            app:destination="@id/audioPlayerFragment" />

        <action
            android:id="@+id/action_media_to_playlist"
            app:destination="@id/playlistFragment" />
    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlistmaker.ui.playlists.fragment.PlaylistFragment"
        android:label="@string/playlist">

        <argument
            android:name="playlistId"
            app:argType="long" />

        <action
            android:id="@+id/action_playlist_to_player"
            app:destination="@id/audioPlayerFragment" />


        <action
            android:id="@+id/action_playlist_to_edit"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.ui.search.fragment.SearchFragment"
        android:label="@string/search">

        <action
            android:id="@+id/action_search_to_player"
            app:destination="@id/audioPlayerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.ui.settings.fragment.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.ui.player.fragment.AudioPlayerFragment"
        android:label="@string/player">
        <argument
            android:name="track"
            app:argType="com.example.playlistmaker.domain.search.model.Track"
            app:nullable="false" />
        <action
            android:id="@+id/action_audioPlayer_to_createPlaylist"
            app:destination="@id/createPlaylistFragment"/>
    </fragment>


    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.ui.playlists.fragment.CreatePlaylistFragment"
        android:label="@string/new_playlist" />


    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.ui.playlists.fragment.EditPlaylistFragment"
        android:label="@string/playlist">
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

</navigation>