<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="?attr/colorSecondary"

   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/title_margin_start"
            android:paddingTop="@dimen/title_margin_top"
            android:paddingBottom="@dimen/title_margin_bottom">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="?attr/navIcon" />

            <TextView
                style="@style/SettingsTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_left"
                android:text="@string/search"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Поле поиска -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/search_edit_text_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >



            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="@dimen/search_icon_width"
                android:layout_height="@dimen/search_icon_height"
                android:layout_marginStart="@dimen/search_icon_margin_start"
                android:layout_marginEnd="@dimen/search_icon_margin_end"
                android:src="@drawable/baseline_search"
                app:tint="?attr/searchIconColor" />

            <!-- Поле ввода новый спринт -->
            <EditText
                android:id="@+id/search_edit_text"
                style="@style/SearchEditTextStyle"
                android:textCursorDrawable="@drawable/search_cursor"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_field_height"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:maxLines="1"
                />
            <ImageView
                android:id="@+id/clear_icon"
                android:layout_width="@dimen/clear_icon_size"
                android:layout_height="@dimen/clear_icon_size"
                android:layout_marginEnd="@dimen/search_icon_margin_end"
                android:src="@drawable/baseline_close_24"
                android:visibility="gone"
                app:tint="?attr/searchIconColor" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/search_history_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/history_title"
                style="@style/SearchHistoryTitleStyle"
                android:text="@string/search_history_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                android:overScrollMode="never" />

            <Button
                android:id="@+id/clear_history_button"
                style="@style/ClearHistoryButton"
                android:text="@string/clear_history"
                app:cornerRadius="54dp"/>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracksRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                android:overScrollMode="never" />
        </FrameLayout>
            <!-- Заглушка: ничего не найдено -->
            <LinearLayout
                android:id="@+id/placeholder_nothing_found"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/nothing_found_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="110dp"
                    android:src="@drawable/placeholder_nothing_found_light"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/nothing_found_text"
                    style="@style/PlaceholderTextStyle"
                    android:text="@string/nothing_found"
                     />
            </LinearLayout>

            <!-- Заглушка: ошибка соединения -->
            <LinearLayout
                android:id="@+id/placeholder_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                android:clipToPadding="false"
                android:clipChildren="false"

                >
                <!-- Заглушка: ошибка соединения android:layout_marginTop="458dp" заменила на  -->
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/placeholder_error_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"/>

                <TextView
                    android:id="@+id/error_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PlaceholderTitleTextStyle"
                    android:text="@string/connection_error_title"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PlaceholderBodyTextStyle"
                    android:text="@string/connection_error_message"
                    android:layout_marginTop="12dp" />
                <Button
                    android:id="@+id/refresh_button"
                    style="@style/RefreshButtonStyle"
                    android:text="@string/refresh_button"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    app:cornerRadius="54dp"/>

            </LinearLayout>

        </LinearLayout>

</FrameLayout>
