<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/layout_padding_horizontal"
        android:paddingTop="@dimen/layout_padding_top"
        android:paddingBottom="@dimen/layout_padding_bottom">


        <TextView
            style="@style/SettingsTitleStyle"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_between_blocks"
            android:text="@string/settings" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/icon_padding">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_tema" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                style="@style/AppSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/text_margin_end"
                android:text="@string/share" />

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/share"
                android:src="@drawable/share_icon"
                app:tint="?attr/iconsetting" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/support_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/text_margin_end"
                android:text="@string/support" />

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/support"
                android:src="@drawable/support"
                app:tint="?attr/iconsetting" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/agreement_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/text_margin_end"
                android:text="@string/user_agreement" />

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/user_agreement"
                android:src="@drawable/agreement"
                app:tint="@color/YP_Text_Gray" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>